--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "lib/Adafruit-v1"]
 	path = lib/Adafruit-v1
 	url = https://github.com/adafruit/Adafruit-Motor-Shield-library.git
+[submodule "lib/Adafruit_CAP1188"]
+	path = lib/Adafruit_CAP1188
+	url = https://github.com/adafruit/Adafruit_CAP1188_Library.git
